# lib-xvbm-xrt

./: CMakeLists.txt  LICENSE  Makefile  README.md
CMakeModules/: CodeCoverage.cmake
include/: xvbm.h
lib/: xvbm.cpp  xvbm.pc  xvbm.pc.in  xvbm_private.h
tests/: CMakeLists.txt  main.cpp  pool_tests.cpp
